replace name song

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>music player</title>
+    <title>music playe</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b7e9eae502.js" crossorigin="anonymous"></script>
 </head>
@@ -23,7 +23,7 @@
                 <p>Arjeet singh</p>
 
                 <audio  id="song">
-                    <source src="media/_Humko_Tumse_Pyaar_Hai_(Sad)__Ft._Arjun_Rampal,_Amisha_Patel (0).mp3" type="audio/mpeg">
+                    <source src="media/sk.mp3" type="audio/mpeg">
                 </audio>
 
                 <input type="range" value="0" id="progress">
