rename song name

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>Arjeet singh</p>
 
                 <audio  id="song">
-                    <source src="media/_Humko_Tumse_Pyaar_Hai_(Sad)__Ft._Arjun_Rampal,_Amisha_Patel (0).mp3" type="audio/mpeg">
+                    <source src="media/sk.mp3" type="audio/mpeg">
                 </audio>
 
                 <input type="range" value="0" id="progress">
